complete cart, add cruds

--- a/site/src/Bp/ProductBundle/Resources/views/Pack/index.html.twig
+++ b/site/src/Bp/ProductBundle/Resources/views/Pack/index.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Product list</h1>
+    <h1>Pack list</h1>
 
     <table class="records_list">
         <thead>
@@ -19,7 +19,7 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('admin_product_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                <td><a href="{{ path('admin_pack_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
                 <td>{{ entity.description }}</td>
                 <td>{{ entity.reference }}</td>
@@ -29,10 +29,10 @@
                 <td>
                 <ul>
                     <li>
-                        <a href="{{ path('admin_product_show', { 'id': entity.id }) }}">show</a>
+                        <a href="{{ path('admin_pack_show', { 'id': entity.id }) }}">show</a>
                     </li>
                     <li>
-                        <a href="{{ path('admin_product_edit', { 'id': entity.id }) }}">edit</a>
+                        <a href="{{ path('admin_pack_edit', { 'id': entity.id }) }}">edit</a>
                     </li>
                 </ul>
                 </td>
@@ -43,7 +43,7 @@
 
         <ul>
         <li>
-            <a href="{{ path('admin_product_new') }}">
+            <a href="{{ path('admin_pack_new') }}">
                 Create a new entry
             </a>
         </li>
