--- a/site/src/Bp/ProductBundle/Resources/views/Pack/show.html.twig
+++ b/site/src/Bp/ProductBundle/Resources/views/Pack/show.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Product</h1>
+    <h1>Pack</h1>
 
     <table class="record_properties">
         <tbody>
@@ -38,12 +38,12 @@
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('admin_product') }}">
+        <a href="{{ path('admin_pack') }}">
             Back to the list
         </a>
     </li>
     <li>
-        <a href="{{ path('admin_product_edit', { 'id': entity.id }) }}">
+        <a href="{{ path('admin_pack_edit', { 'id': entity.id }) }}">
             Edit
         </a>
     </li>
