add order service

--- a/site/src/Bp/CartBundle/Resources/views/Default/index.html.twig
+++ b/site/src/Bp/CartBundle/Resources/views/Default/index.html.twig
@@ -13,7 +13,7 @@
         {% for item in cart.products %}
         <tr>
             <td>{{ item.name }}
-            {% if item.products %}
+            {% if item.products is defined %}
                 <table>
                 {% for it in item.products %}
                     <tr><td>{{ it.name }}</td></tr>
