--- a/site/src/Bp/CartBundle/Resources/views/Default/index.html.twig
+++ b/site/src/Bp/CartBundle/Resources/views/Default/index.html.twig
@@ -54,7 +54,8 @@
     </tbody>
 </table>
 
-    <div class="payment-wrapper">
+ {{ stripe_render() }}
+  <!--   <div class="payment-wrapper">
        <form action="" method="POST" id="payment-form">
          <span class="payment-errors"></span>
 
@@ -83,7 +84,7 @@
 
          <button id="payment-submit" type="submit">Submit Payment</button>
        </form>
-    </div>
+    </div> -->
 
 {# <form action="" method="POST">
   <script
