--- a/site/src/Bp/AdminBundle/Resources/views/layout.html.twig
+++ b/site/src/Bp/AdminBundle/Resources/views/layout.html.twig
@@ -25,7 +25,12 @@
 <section role="main">
     <div class="container">
         <div class="col-md-3">
-            menu
+            <ul>
+                <li><a href="{{ url("admin_user") }}">Utilisateurs</a></li>
+                <li><a href="{{ url("admin_pack") }}">Packs</a></li>
+                <li><a href="{{ url("admin_product") }}">Produits</a></li>
+                <li><a href="{{ url("admin_object") }}">Stocks</a></li>
+            </ul>
         </div>
         <div class="col-md-9">
             {% block content %}
