add contract management

--- a/site/src/Bp/AdminBundle/Resources/views/layout.html.twig
+++ b/site/src/Bp/AdminBundle/Resources/views/layout.html.twig
@@ -30,6 +30,7 @@
                 <li><a href="{{ url("admin_pack") }}">Packs</a></li>
                 <li><a href="{{ url("admin_product") }}">Produits</a></li>
                 <li><a href="{{ url("admin_object") }}">Stocks</a></li>
+                <li><a href="{{ url("bp_admin_contract_index") }}">Manageur de contrats</a></li>
             </ul>
         </div>
         <div class="col-md-9">
