add effective fill db script

--- a/site/src/Bp/CoreBundle/Resources/views/Default/index.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/Default/index.html.twig
@@ -5,5 +5,7 @@
 </head>
 <body>
 Accueil
+<a href="{{ path("bp_core_default_test") }}">a</a>
+<a href="{{ url("bp_core_default_test") }}">b</a>
 </body>
 </html>
