--- a/site/src/Bp/ProductBundle/Resources/views/Object/show.html.twig
+++ b/site/src/Bp/ProductBundle/Resources/views/Object/show.html.twig
@@ -3,7 +3,7 @@
 {% block body -%}
     <h1>Object</h1>
 
-    <table class="record_properties">
+    <table class="record_properties table">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -24,7 +24,7 @@
         </tbody>
     </table>
 
-        <ul class="record_actions">
+        <ul class="record_actions list-inline">
     <li>
         <a href="{{ path('admin_object') }}">
             Back to the list
