--- a/site/src/Bp/AdminBundle/Resources/views/layout.html.twig
+++ b/site/src/Bp/AdminBundle/Resources/views/layout.html.twig
@@ -25,13 +25,13 @@
 <section role="main">
     <div class="container">
         <div class="col-md-3">
-            <ul>
-                <li><a href="{{ url("admin_user") }}">Utilisateurs</a></li>
-                <li><a href="{{ url("admin_pack") }}">Packs</a></li>
-                <li><a href="{{ url("admin_product") }}">Produits</a></li>
-                <li><a href="{{ url("admin_object") }}">Stocks</a></li>
-                <li><a href="{{ url("bp_admin_contract_index") }}">Manageur de contrats</a></li>
-            </ul>
+            <div class="list-group">
+                <a class="list-group-item" href="{{ url("admin_user") }}">Utilisateurs</a>
+                <a class="list-group-item" href="{{ url("admin_pack") }}">Packs</a>
+                <a class="list-group-item" href="{{ url("admin_product") }}">Produits</a>
+                <a class="list-group-item" href="{{ url("admin_object") }}">Stocks</a>
+                <a class="list-group-item" href="{{ url("bp_admin_contract_index") }}">Manageur de contrats</a>
+            </div>
         </div>
         <div class="col-md-9">
             {% block content %}
