--- a/site/src/Bp/ProductBundle/Resources/views/Pack/index.html.twig
+++ b/site/src/Bp/ProductBundle/Resources/views/Pack/index.html.twig
@@ -3,7 +3,7 @@
 {% block body -%}
     <h1>Pack list</h1>
 
-    <table class="records_list">
+    <table class="records_list table table-striped">
         <thead>
             <tr>
                 <th>Id</th>
@@ -20,7 +20,7 @@
         {% for entity in entities %}
             <tr>
                 <td><a href="{{ path('admin_pack_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.name }}</td>
+                <td><a href="{{ path('admin_pack_show', { 'id': entity.id }) }}">{{ entity.name }}</a></td>
                 <td>{{ entity.description }}</td>
                 <td>{{ entity.reference }}</td>
                 <td>{{ entity.price }}</td>
