--- a/site/src/Bp/ProductBundle/Resources/views/Product/index.html.twig
+++ b/site/src/Bp/ProductBundle/Resources/views/Product/index.html.twig
@@ -3,7 +3,7 @@
 {% block body -%}
     <h1>Product list</h1>
 
-    <table class="records_list">
+    <table class="records_list table table-striped">
         <thead>
             <tr>
                 <th>Id</th>
@@ -12,6 +12,7 @@
                 <th>Reference</th>
                 <th>Price</th>
                 <th>Quantity</th>
+                <th>Packs</th>
                 <th>Active</th>
                 <th>Actions</th>
             </tr>
@@ -21,10 +22,17 @@
             <tr>
                 <td><a href="{{ path('admin_product_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
-                <td>{{ entity.description }}</td>
+                <td>{{ entity.description[:50] ~ '...' }}</td>
                 <td>{{ entity.reference }}</td>
                 <td>{{ entity.price }}</td>
                 <td>{{ entity.quantity }}</td>
+                <td>
+                {% if entity.packs|length > 0 %}
+                    {% for pack in  entity.packs %}
+                        <li><a href="{{ path('admin_pack_show', { 'id': pack.id }) }}">{{ pack.name }}</a></li> 
+                    {% endfor %}
+                {% endif %}
+                </td>
                 <td>{{ entity.active }}</td>
                 <td>
                 <ul>
