--- a/site/src/Bp/ProductBundle/Resources/views/Photo/edit.html.twig
+++ b/site/src/Bp/ProductBundle/Resources/views/Photo/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Product edit</h1>
+    <h1>Photo edit</h1>
 
     {{ form(edit_form) }}
 
-        <ul class="record_actions list-inline">
+        <ul class="record_actions">
     <li>
-        <a href="{{ path('admin_product') }}">
+        <a href="{{ path('admin_photo') }}">
             Back to the list
         </a>
     </li>
