--- a/site/src/Bp/ProductBundle/Resources/views/Photo/show.html.twig
+++ b/site/src/Bp/ProductBundle/Resources/views/Photo/show.html.twig
@@ -1,37 +1,37 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Type</h1>
+    <h1>Photo</h1>
 
-    <table class="record_properties  table table-striped">
+    <table class="record_properties">
         <tbody>
             <tr>
                 <th>Id</th>
                 <td>{{ entity.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
-                <td>{{ entity.name }}</td>
-            </tr>
-             <tr>
-                <th>Description</th>
-                <td>{{ entity.description }}</td>
+                <th>Path</th>
+                <td>{{ entity.path }}</td>
             </tr>
             <tr>
-                <th>image</th>
-                <td><img src="{{ entity.webPath | imagine_filter('type_medium') }}" /></td>
+                <th>Alt</th>
+                <td>{{ entity.alt }}</td>
+            </tr>
+            <tr>
+                <th>Description</th>
+                <td>{{ entity.description }}</td>
             </tr>
         </tbody>
     </table>
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('admin_type') }}">
+        <a href="{{ path('admin_photo') }}">
             Back to the list
         </a>
     </li>
     <li>
-        <a href="{{ path('admin_type_edit', { 'id': entity.id }) }}">
+        <a href="{{ path('admin_photo_edit', { 'id': entity.id }) }}">
             Edit
         </a>
     </li>
