--- a/site/src/Bp/ProductBundle/Resources/views/Product/show.html.twig
+++ b/site/src/Bp/ProductBundle/Resources/views/Product/show.html.twig
@@ -30,13 +30,58 @@
                 <td>{{ entity.quantity }}</td>
             </tr>
             <tr>
+                <th>Types</th>
+                <td>
+                    <ul>
+                    {% for type in entity.types %}
+                        <li>{{ type.name }}</li>
+                    {% endfor %}
+                    </ul>
+                </td>
+            </tr>
+            <tr>
                 <th>Active</th>
                 <td>{{ entity.active }}</td>
             </tr>
         </tbody>
     </table>
 
+    <h2>Images</h2>
+    <table class="records_list  table table-striped">
+        <thead>
+            <tr>
+                <th>Photo</th>
+                <th>alt</th>
+                <th>description</th>
+                <th>action</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for image in entity.photos %}
+            <tr>
+                <td><img src="{{ image.webPath|imagine_filter("type_medium") }}"></td>
+                <td>{{ image.alt }}</td>
+                <td>{{ image.description }}</td>
+                <td>
+                <ul>
+                    <li>
+                        <a href="{{ path('admin_type_show', { 'id': entity.id }) }}">show</a>
+                    </li>
+                    <li>
+                        <a href="{{ path('admin_type_edit', { 'id': entity.id }) }}">edit</a>
+                    </li>
+                </ul>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+ 
         <ul class="record_actions list-inline">
+        <li>
+            <a href="{{ path("bp_admin_photo_add", { idProduct: entity.id }) }}">Ajouter une photo</a>
+        </li>
     <li>
         <a href="{{ path('admin_product') }}">
             Back to the list
