--- a/site/src/Bp/ProductBundle/Resources/views/Product/index.html.twig
+++ b/site/src/Bp/ProductBundle/Resources/views/Product/index.html.twig
@@ -21,8 +21,8 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('admin_product_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.name }}</td>
+                <td>{{ entity.id }}</td>
+                <td><a href="{{ path('admin_product_show', { 'id': entity.id }) }}">{{ entity.name }}</a></td>
                 <td>{{ entity.description[:50] ~ '...' }}</td>
                 <td>{{ entity.reference }}</td>
                 <td>{{ entity.price }}</td>
