--- a/site/src/Bp/ProductBundle/Resources/views/Product/show.html.twig
+++ b/site/src/Bp/ProductBundle/Resources/views/Product/show.html.twig
@@ -70,6 +70,18 @@
                     <li>
                         <a href="{{ path('admin_type_edit', { 'id': entity.id }) }}">edit</a>
                     </li>
+                    <li>
+                        {% if entity.mainPhoto == image %}
+                        cette photo est la photo principale
+                        {% else %}
+                        <form method="post" action="{{ path("bp_admin_photo_setmain") }}">
+                            <input type="hidden" name="type" value="product"/>
+                            <input type="hidden" name="id" value="{{ entity.id }}"/>
+                            <input type="hidden" name="id_photo" value="{{ image.id }}"/>
+                            <button type="submit">Mettre en photo principale</button>
+                        </form>
+                        {% endif %}
+                    </li>
                 </ul>
                 </td>
             </tr>
