--- a/site/src/Bp/AdminBundle/Resources/views/layout.html.twig
+++ b/site/src/Bp/AdminBundle/Resources/views/layout.html.twig
@@ -37,6 +37,7 @@
                 <a class="list-group-item" href="{{ url("admin_object") }}">Stocks</a>
                 <a class="list-group-item" href="{{ url("bp_admin_contract_index") }}">Manageur de contrats</a>
                 <a class="list-group-item" href="{{ url("admin_type") }}">Types</a>
+                <a class="list-group-item" href="{{ url("admin_category") }}">Catégories</a>
             </div>
         </div>
         <div class="col-md-9">
