--- a/site/src/Bp/CoreBundle/Resources/views/Default/index.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/Default/index.html.twig
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{% extends "BpCoreBundle::mainlayout.html.twig" %}
+
+{% block body %}
 Accueil
-</body>
-</html>
+{% endblock body %}
