--- a/site/src/Bp/CartBundle/Resources/views/Default/index.html.twig
+++ b/site/src/Bp/CartBundle/Resources/views/Default/index.html.twig
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{% extends "BpCoreBundle::mainlayout.html.twig" %}
 
+{% block body %}
 <table>
     <thead>
         <tr>
@@ -55,48 +51,7 @@
 </table>
 
  {{ stripe_render() }}
-  <!--   <div class="payment-wrapper">
-       <form action="" method="POST" id="payment-form">
-         <span class="payment-errors"></span>
-
-         <div class="form-row">
-           <label>
-             <span>Card Number</span>
-             <input type="text" size="20" data-stripe="number"/>
-           </label>
-         </div>
-
-         <div class="form-row">
-           <label>
-             <span>CVC</span>
-             <input type="text" size="4" data-stripe="cvc"/>
-           </label>
-         </div>
-
-         <div class="form-row">
-           <label>
-             <span>Expiration (MM/YYYY)</span>
-             <input type="text" size="2" data-stripe="exp-month"/>
-           </label>
-           <span> / </span>
-           <input type="text" size="4" data-stripe="exp-year"/>
-         </div>
-
-         <button id="payment-submit" type="submit">Submit Payment</button>
-       </form>
-    </div> -->
-
-{# <form action="" method="POST">
-  <script
-    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="pk_test_Lhv2dAaOBrllKV4eiEl4m9C1"
-    data-amount="2500"
-    data-name="Demo Site"
-    data-description="2 widgets ($20.00)"
-    data-image="/128x128.png">
-  </script>
-</form>
- #}
+ 
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 
     {{ stripe_scripts() }}
@@ -112,5 +67,4 @@
 </script>
 
 {% include  "BpCoreBundle::tawkto.html.twig" %}
-</body>
-</html>
+{% endblock body %}
