--- a/site/src/Bp/CoreBundle/Resources/views/Product/show.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/Product/show.html.twig
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Produit</title>
-</head>
-<body>
+{% extends "BpCoreBundle::mainlayout.html.twig" %}
+
+{% block body %}
 <h1>{{ product.name }}</h1>
 
 <h2>Description</h2>
@@ -35,7 +32,7 @@
 {% for photo in product.photos %}
 <img src="{{ photo.webPath|imagine_filter("type_medium") }}">
 {% endfor %}
-<h2>Commentaires</h2>
+<h2>Commentaires ({{ product.comments|length }}) - note : {{ product.comments|averageNote }}</h2>
 <ul>
     {% for comment in product.comments %}
     <li>{{ comment.user.username }} : {{ comment.text }} ({{ comment.date|date }}) - note {{ comment.note }}</li>
@@ -45,5 +42,4 @@
 <h3>Poster un commentaire</h3>
 {{ render(controller('BpProfileBundle:Comment:index', {id: product.id, type: product|class})) }}
 
-</body>
-</html>
+{% endblock body %}
