--- a/site/src/Bp/CoreBundle/Resources/views/mainlayout.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/mainlayout.html.twig
@@ -27,5 +27,7 @@ user connecté : {{ app.user.username }}
     
 </footer>
 {% include  "BpCoreBundle::tawkto.html.twig" %}
+<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+<script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
 </body>
 </html>
