add pack editor controller

--- a/site/src/Bp/CoreBundle/Resources/views/partials/header.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/partials/header.html.twig
@@ -20,7 +20,7 @@
 			<nav>
 				<ul>
 					<li><a href="{{ path('bp_core_pack_index') }}">Choisir un pack</a></li>
-					<li><a href="/pack-editor">Créer son pack</a></li>
+					<li><a href="{{ path("bp_core_packeditor_index") }}">Créer son pack</a></li>
 					<li class="shop">
 						<a href="#">Boutique {{ icons('triangle')|raw }}</a>
 					</li>
