--- a/site/src/Bp/CoreBundle/Resources/views/components/your-pack.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/components/your-pack.html.twig
@@ -1,8 +1,8 @@
-<div class="your-pack-container {{class}}">
+<div class="your-pack-container">
 	<p class="title">Votre pack : </p>
 	<div class="product-choice">
 		<div class="img-container">
-			<img src="img/default-product-pack.png" alt="">
+			<img src="{{ asset('public/img/default-product-pack.png') }}" alt="">
 			<p class="number">1</p>
 			<div class="edit-container">
 				{{ icons('edit')|raw }}
@@ -20,7 +20,7 @@
 
 	<div class="product-choice">
 		<div class="img-container">
-			<img src="img/default-product-pack.png" alt="">
+			<img src="{{ asset('public/img/default-product-pack.png') }}" alt="">
 			<p class="number">2</p>
 			<div class="edit-container">
 				{{ icons('edit')|raw }}
@@ -38,7 +38,7 @@
 
 	<div class="product-choice">
 		<div class="img-container">
-			<img src="img/default-product-pack.png" alt="">
+			<img src="{{ asset('public/img/default-product-pack.png') }}" alt="">
 			<p class="number">3</p>
 			<div class="edit-container">
 				{{ icons('edit')|raw }}
@@ -56,7 +56,7 @@
 
 	<div class="product-choice">
 		<div class="img-container">
-			<img src="img/default-product-pack.png" alt="">
+			<img src="{{ asset('public/img/default-product-pack.png') }}" alt="">
 			<p class="number">4</p>
 			<div class="edit-container">
 				{{ icons('edit')|raw }}
