--- a/site/src/Bp/CoreBundle/Resources/views/partials/foot.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/partials/foot.html.twig
@@ -26,7 +26,7 @@
 
 </script>
 
-{% include  "BpCoreBundle::tawkto.html.twig" %}
+{# {% include  "BpCoreBundle::tawkto.html.twig" %} #}
 <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
 <script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
 
