--- a/site/web/public/css/style.css
+++ b/site/web/public/css/style.css
@@ -1117,6 +1117,172 @@ p {
         .product-detail .reviews-container .score-container .score-circle .circle:nth-child(5) {
           left: 120px; }
 
+.popin {
+  margin: auto; }
+  .popin .top-header {
+    background-color: #ffffff;
+    width: 1030px;
+    margin: 0 10px;
+    box-sizing: border-box;
+    float: left; }
+    .popin .top-header .slider-product {
+      margin-top: 35px;
+      position: relative; }
+      .popin .top-header .slider-product ul {
+        width: 85px;
+        margin: 0 10px;
+        box-sizing: border-box;
+        float: left;
+        margin-left: calc( -735px + 10px);
+        padding-top: 55px; }
+        .popin .top-header .slider-product ul li {
+          width: 100%;
+          height: 85px;
+          margin: 20px 0;
+          opacity: .4;
+          transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1); }
+          .popin .top-header .slider-product ul li.active, .popin .top-header .slider-product ul li:hover {
+            opacity: 1; }
+      .popin .top-header .slider-product .slides-container {
+        width: 610px;
+        margin: 0 10px;
+        box-sizing: border-box;
+        float: left;
+        margin-left: calc( 105px + 10px);
+        position: relative;
+        overflow: hidden;
+        padding-top: 55px; }
+        .popin .top-header .slider-product .slides-container .slides {
+          width: 100%;
+          height: 420px; }
+          .popin .top-header .slider-product .slides-container .slides .slide {
+            width: 100%;
+            position: absolute;
+            text-align: center;
+            opacity: 0;
+            vertical-align: middle;
+            transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1); }
+            .popin .top-header .slider-product .slides-container .slides .slide.after {
+              -webkit-transform: translateX(100%);
+                  -ms-transform: translateX(100%);
+                      transform: translateX(100%); }
+            .popin .top-header .slider-product .slides-container .slides .slide.before {
+              -webkit-transform: translateX(-100%);
+                  -ms-transform: translateX(-100%);
+                      transform: translateX(-100%); }
+            .popin .top-header .slider-product .slides-container .slides .slide.active {
+              opacity: 1; }
+            .popin .top-header .slider-product .slides-container .slides .slide img {
+              display: inline-block;
+              max-width: 100%; }
+    .popin .top-header .product-info {
+      width: 400px;
+      margin: 0 10px;
+      box-sizing: border-box;
+      float: left;
+      margin-bottom: 50px; }
+      .popin .top-header .product-info h1 {
+        font-size: 44px;
+        font-weight: 600;
+        color: #2a2a2c; }
+      .popin .top-header .product-info h2 {
+        font-size: 19px;
+        color: #58c4d9;
+        font-weight: 400;
+        margin-bottom: 10px; }
+      .popin .top-header .product-info h3 {
+        font-size: 16px;
+        font-weight: 600;
+        margin-bottom: 20px;
+        text-transform: uppercase; }
+      .popin .top-header .product-info p:not(.price) {
+        color: #86888b;
+        font-size: 17px;
+        line-height: 1.4em;
+        margin-bottom: 30px; }
+        .popin .top-header .product-info p:not(.price) .disponibility {
+          font-size: 14px;
+          font-weight: 600;
+          color: #e0e0e0;
+          text-transform: uppercase; }
+      .popin .top-header .product-info a:not(.button) {
+        font-size: 16px;
+        font-weight: 600;
+        margin-bottom: 20px;
+        float: left; }
+        .popin .top-header .product-info a:not(.button).active {
+          border-bottom: 2px solid #58c4d9; }
+      .popin .top-header .product-info .icon-container {
+        width: 20px;
+        height: 20px;
+        margin: 20px;
+        display: block;
+        float: none !important; }
+        .popin .top-header .product-info .icon-container svg {
+          float: left;
+          fill: #e0e0e0;
+          stroke: #e0e0e0;
+          transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1); }
+        .popin .top-header .product-info .icon-container span {
+          display: block;
+          color: #e0e0e0;
+          margin-left: 30px;
+          opacity: 0;
+          transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1); }
+        .popin .top-header .product-info .icon-container:hover svg {
+          fill: #58c4d9;
+          stroke: #58c4d9; }
+        .popin .top-header .product-info .icon-container:hover span {
+          opacity: 1;
+          color: #58c4d9; }
+        .popin .top-header .product-info .icon-container.active {
+          border-bottom: none !important; }
+          .popin .top-header .product-info .icon-container.active svg {
+            fill: #58c4d9;
+            stroke: #58c4d9; }
+          .popin .top-header .product-info .icon-container.active span {
+            color: #58c4d9; }
+      .popin .top-header .product-info .color-container:after, .popin .top-header .product-info .size-container:after {
+        clear: both;
+        content: '';
+        display: block; }
+      .popin .top-header .product-info .color {
+        width: 30px;
+        height: 30px;
+        border-radius: 25px;
+        margin-right: 10px;
+        background-color: #000000;
+        box-sizing: border-box;
+        transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1); }
+        .popin .top-header .product-info .color.active, .popin .top-header .product-info .color:hover {
+          border: 2px solid #58c4d9; }
+      .popin .top-header .product-info .size {
+        width: 15px;
+        height: 25px;
+        text-align: center;
+        text-transform: uppercase;
+        box-sizing: border-box;
+        margin-right: 10px;
+        transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1); }
+        .popin .top-header .product-info .size.active, .popin .top-header .product-info .size:hover {
+          color: #2a2a2c;
+          border-bottom: 2px solid #58c4d9; }
+  .popin .button.delete {
+    background-color: #fa5e45;
+    margin-left: 20px; }
+
+.popin-container {
+  display: none; }
+  .popin-container.open {
+    display: block;
+    position: fixed;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 10; }
+
 .main-header .connection-container {
   box-sizing: border-box;
   background-color: #f5f5f5;
