--- a/site/src/Bp/CoreBundle/Resources/views/components/product-detail.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/components/product-detail.html.twig
@@ -6,14 +6,14 @@
 					<div class="slides">
 						{% for photo in product.photos %}
 						<div class="slide active">
-							<img src="{{ photo.webPath|imagine_filter("type_medium") }}" alt="">
+							<img src="{{ photo.webPath|imagine_filter("large") }}" alt="">
 						</div>
 						{% endfor %}
 					</div>
 				</div>
 				<ul>
 					{% for photo in product.photos %}
-					<li class="active"><img src="{{ photo.webPath|imagine_filter("type_medium") }}" alt=""></li>
+					<li class="active"><img src="{{ photo.webPath|imagine_filter("small") }}" alt=""></li>
 					{% endfor %}
 				</ul>
 			</div>
