--- a/site/web/public/css/style.css
+++ b/site/web/public/css/style.css
@@ -391,6 +391,12 @@ p {
     .button.transparent:hover {
       background-color: #ffffff;
       color: #2a2a2c; }
+  .button.green {
+    background-color: #b6cf70; }
+  .button .icon {
+    width: 14px;
+    height: 14px;
+    fill: #ffffff; }
 
 .price-container .button {
   float: left; }
@@ -1119,6 +1125,17 @@ p {
 
 .popin {
   margin: auto; }
+  .popin .close {
+    position: absolute;
+    width: 100%;
+    height: 20px;
+    left: 0;
+    text-align: center;
+    margin-top: -40px; }
+    .popin .close svg {
+      cursor: pointer;
+      fill: #ffffff;
+      stroke: #ffffff; }
   .popin .top-header {
     background-color: #ffffff;
     width: 1030px;
@@ -1133,7 +1150,7 @@ p {
         margin: 0 10px;
         box-sizing: border-box;
         float: left;
-        margin-left: calc( -735px + 10px);
+        margin-left: calc( -630px + 10px);
         padding-top: 55px; }
         .popin .top-header .slider-product ul li {
           width: 100%;
@@ -1144,7 +1161,7 @@ p {
           .popin .top-header .slider-product ul li.active, .popin .top-header .slider-product ul li:hover {
             opacity: 1; }
       .popin .top-header .slider-product .slides-container {
-        width: 610px;
+        width: 505px;
         margin: 0 10px;
         box-sizing: border-box;
         float: left;
@@ -1270,6 +1287,74 @@ p {
   .popin .button.delete {
     background-color: #fa5e45;
     margin-left: 20px; }
+  .popin .validate {
+    background-color: #ffffff;
+    display: none;
+    width: 1030px;
+    margin: 0 10px;
+    box-sizing: border-box;
+    float: left; }
+    .popin .validate .exergue {
+      width: 610px;
+      margin: 0 10px;
+      box-sizing: border-box;
+      float: left;
+      margin-left: calc( 210px + 10px);
+      margin-right: calc( 210px);
+      margin-top: 30px; }
+    .popin .validate .products {
+      margin-left: calc( 105px + 10px);
+      margin-right: calc( 105px);
+      margin-bottom: 30px; }
+      .popin .validate .products .product {
+        width: 190px;
+        margin: 0 10px;
+        box-sizing: border-box;
+        float: left;
+        margin-left: 0; }
+        .popin .validate .products .product:last-of-type {
+          margin-right: 0; }
+        .popin .validate .products .product img {
+          width: 190px;
+          height: 190px;
+          height: 190px; }
+        .popin .validate .products .product h6 {
+          font-size: 12px;
+          color: #86888b;
+          text-align: center;
+          line-height: 1em; }
+        .popin .validate .products .product h3 {
+          font-size: 15px;
+          color: #2a2a2c;
+          text-align: center;
+          font-weight: 600; }
+    .popin .validate .action-container {
+      width: 1030px;
+      margin: 0 10px;
+      box-sizing: border-box;
+      float: left;
+      text-align: center;
+      margin-bottom: 30px; }
+      .popin .validate .action-container .price-container {
+        display: inline-block; }
+        .popin .validate .action-container .price-container .price {
+          float: none; }
+      .popin .validate .action-container .edit-btn {
+        display: inline-block;
+        color: #58c4d9;
+        background-color: transparent;
+        border: 2px solid #58c4d9;
+        padding: 18px 20px;
+        padding-left: 50px;
+        margin-right: 20px;
+        box-sizing: border-box; }
+        .popin .validate .action-container .edit-btn .icon {
+          position: absolute;
+          fill: #58c4d9;
+          margin-left: -30px;
+          margin-top: -5px;
+          width: 20px;
+          height: 20px; }
 
 .popin-container {
   display: none; }
