--- a/site/src/Bp/CartBundle/Resources/views/Default/embedCart.html.twig
+++ b/site/src/Bp/CartBundle/Resources/views/Default/embedCart.html.twig
@@ -8,7 +8,7 @@
 
     {% else %}
 
-    <div class="pack-personalized">
+    {# <div class="pack-personalized">
         <h3>Votre pack presonnalisé</h3>
         <div class="item">
             <div class="img-container">
@@ -24,7 +24,7 @@
             <h4>choisissez encore 3 autres produits pour completer votre pack</h4>
             <a href="#" class="button">Voir le catalogue</a>
         </div>
-    </div>
+    </div> #}
 
     <div class="shop-cart">
         <h3>Votre panier<span>Prix</span></h3>
